--- a/CSS/ASSUNTOS/number.css
+++ b/CSS/ASSUNTOS/number.css
@@ -10,19 +10,18 @@
     --cor_body: #002A62; 
 }
 
+ul li{
+    margin-left: 40px;
+    color: white;
+}
+a{
+    color: white; 
+}
 body {
     font-family: poppins, sans-serif;
     background-color: var(--cor_body);
+    display: inline-block;
 }
-
-.material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 700,
-  'GRAD' 200,
-  'opsz' 48
-}
-
 .cabecalho {
     display: flex;
     flex-direction: row;
@@ -34,6 +33,11 @@ body {
 }
 
 .cabecalho__detalhes{
+    display: flex;
+    align-items: center;
+}
+.redirecionar_pag_inicial{
+    text-decoration: none;
     display: flex;
     align-items: center;
 }
@@ -57,9 +61,6 @@ nav li a{
     color: white;
     text-decoration: none;
 }
-.icon_cabecalho_inicio{
-    color: white;
-}
 .icon_cabecalho{
     color: white; 
 }
@@ -82,44 +83,31 @@ nav li a{
     display: block;
     color: white;
 }
-.painel_1{
-    background-color: var(--azul_escuro); 
+
+
+.texto_body_titulo{
+    color: white;
+    font-family: "Lexend", Arial, Helvetica, sans-serif;
+    font-size: 22px;
     margin-top: 20px;
     margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 20px;
-    border-radius: 15px; 
-    height: auto;
-    align-items: center;
-}
-.texto_painel_1{
-    color: white;
-    padding: 10px;
-    font-family: "Libre Franklin", Arial, Helvetica, sans-serif;
-}
-.fonte_painel_1{
-    color: white;
-    margin-left: 80%;
-}
-.link_painel_1{
-    color: white;
-}
-.texto_body_titulo{
-    font-family: 'Lexend', Arial, Helvetica, sans-serif; 
-    margin-left: 20px; 
-    color: white;
 }
 .texto_body_texto{
-    font-family: "Libre Franklin", Arial, Helvetica, sans-serif;
-    margin-left: 20px; 
     color: white;
-    margin-bottom: 10px;
-}
-.textos_container{
+    font-family: "Libre Franklin", Arial, Helvetica, sans-serif;
+    margin-left: 20px;
     display: inline-block;
 }
-
-
+.imagens_dos_codigos{
+    height: 80px;
+    width: 300px;
+    margin-left: 20px;
+}
+.voltar_pag_inicial{
+    font-family: 'Courier Prime', Arial, Helvetica, sans-serif; 
+    font-size: 16px;
+    margin-left: 20px;
+}
 
 .main-footer {
 	background-color: black;
