--- a/CSS/ASSUNTOS/string.css
+++ b/CSS/ASSUNTOS/string.css
@@ -20,11 +20,37 @@ a{
 body {
     font-family: poppins, sans-serif;
     background-color: var(--cor_body);
+    display: inline-block;
 }
-nav{
-    background-color: #004AAD;
-    height: 50px; 
+.cabecalho {
+    display: flex;
+    flex-direction: row;
+    justify-content:  space-between;
+    background-color: var(--azul_escuro);
     align-items: center;
+    height: var(--altura_cabecalho);
+    padding: 35px 40px; 
+}
+.cabecalho__detalhes{
+    display: flex;
+    align-items: center;
+}
+.redirecionar_pag_inicial{
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+}
+.nome_site_aprenda{
+    font-family: 'Courier Prime', Arial, Helvetica, sans-serif; 
+    font-size: 19px; 
+    color: white;
+}
+.nome_site_ts{
+    font-family: 'Lexend', Arial, Helvetica, sans-serif; 
+    font-size: 20px; 
+    margin-left: 5px;
+    color: white;
+    margin-bottom: 5px;
 }
 nav li{
     display: inline-block;
@@ -35,11 +61,7 @@ nav li a{
     text-decoration: none;
 }
 .icon_cabecalho{
-    color: white;
-    position: absolute;
-    height: 50px;
-    width: 150px;
-    right: 0px;
+    color: white; 
 }
 .lista_do_cabecalho:hover .topicos{
     display: block;
@@ -53,10 +75,14 @@ nav li a{
     width: 150px;
     right: 0px;
 }
+.topicos a:hover{
+    background-color: #398cf8;
+}
 .topicos a{
     display: block;
     color: white;
 }
+
 
 .texto_body_titulo{
     color: white;
@@ -71,8 +97,34 @@ nav li a{
     margin-left: 20px;
     display: inline-block;
 }
+.imagens_dos_codigos{
+    height: 80px;
+    width: 300px;
+    margin-left: 20px;
+}
 .voltar_pag_inicial{
     font-family: 'Courier Prime', Arial, Helvetica, sans-serif; 
     font-size: 16px;
     margin-left: 20px;
+}
+
+.main-footer {
+	background-color: black;
+    display: flex;
+    margin-top: 100%;
+    height: 70px; 
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+.img_rodape{
+    width: 40px;
+    height: 40px; 
+    margin-left: 10px;
+}
+.div1_rodape{
+    display: flex;
+}
+.div2_rodape{
+    display: inline-block;
 }
