--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -77,6 +77,7 @@ nav li a{
 }
 .topicos a:hover{
     background-color: #398cf8;
+    
 }
 .topicos a{
     display: block;
@@ -118,7 +119,11 @@ nav li a{
 .textos_container{
     display: inline-block;
 }
-
+.visual_studio_code_img{
+    height: 50px;
+    width: 100px;
+    margin-left: 20px;
+}
 
 
 .main-footer {
